# Callisto

./: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: anime.rs  mod.rs  music.rs  novel.rs  reader.rs  tracker.rs
src-tauri/src/db/: migrations.sql  mod.rs  models.rs
src/components/layout/: Dashboard.tsx
src/components/pet/: PetBubble.tsx  PetCanvas.tsx  PetOverlay.tsx
src/pages/: AnimeList.tsx  GameLibrary.tsx  Home.tsx  MusicPlayer.tsx  NovelReader.tsx  NovelWriter.tsx  Pomodoro.tsx  Settings.tsx  TimeStats.tsx
src/styles/: global.css  pixel-theme.css
src/types/: media.ts  novel.ts
