[package]
name = "callisto"
version = "0.1.0"
edition = "2024"
description = "ACG Personal Space Desktop Pet"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "callisto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
